--- a/LTD/r1/index.html
+++ b/LTD/r1/index.html
@@ -95,11 +95,11 @@ body {
 <!-- B O D Y -->
 
 <div class="FAKEheader">
-  <h2>REGULAMIN GWorld FoE należącej do LTD Gem</h2> <!-- HEADLINE --> 
+  <h2>REGULAMIN GWorld należącej do LTD Game</h2> <!-- HEADLINE --> 
 </div>
 <!-- H E A D E R -->
 <div class="header">
-  <h2>REGULAMIN GWorld FoE należącej do LTD Gem</h2> <!-- HEADLINE -->
+  <h2>REGULAMIN GWorld należącej do LTD Game</h2> <!-- HIDDEN HEADLINE -->
   <div class="progress-container">
     <div class="progress-bar" id="myBar"></div>
   </div>  
@@ -194,7 +194,7 @@ Kruczki Regulaminowe:
 Jeśli punkt wyznacza jako karę możliwości z punktu 9 to gracz musi być poinformowany o punkcie który decyduje o karze z punktu 9. <br>
 
 
-<h3>Załącznik 2 do REGULAMINU "CZARNA LISTA czyli nieakceptowani w gildii gracze:"</h3>
+<h3>Załącznik 2 do REGULAMINU "CZARNA LISTA czyli nieakceptowani w gildii gracze":</h3>
 
 vodix96<br>
 
