--- a/index.html
+++ b/index.html
@@ -509,7 +509,7 @@ body {font-family: "Lato", sans-serif;}
 
 														<!-- H	E	A	D	E	R -->
 <ul class="topnav">
-<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#">News</a></div></li>
+<li><div><a class="pagelink" onclick="openPage(event, 'page1')" id="PageDefaultOpen" href="#">THIS WEBSITE SOON WILL DISAPPEAR</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page2')" href="#p=ac">Articles</a></div></li>
 <li><div><a class="pagelink" onclick="openPage(event, 'page3')" href="#p=sc">Services</a></div></li>
 <li><div><a class="pagelink" href="/projects/">Projects</a></div></li>
@@ -746,7 +746,7 @@ Obecnie z tzw. shared hostingami (hostingami współdzielonymi) jest tak że co 
 <div style="padding: 20 0 20 0;" class="main">
 <img class="imgincon" width="280vw" src="pictures/ZOJbranding.png">
 ZOJ.ME Is a place for viral news from internet, blog competitions and tutorials.
-
+THIS WEBSITE SOON WILL DISAPPEAR
 
 
 </div>
